fix fieldGroup collapse hover

--- a/src/components/Form/FieldGroup/FieldGroup.css
+++ b/src/components/Form/FieldGroup/FieldGroup.css
@@ -11,6 +11,12 @@
 	@apply px-4 mb-3;
 	@apply flex;
 }
+.label {
+}
+.labelCollapser {
+	@apply hover:underline cursor-pointer;
+	@apply hover:text-secondary;
+}
 .parent {
 }
 
